force-app/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/fields/tspa__Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>tspa__Customer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>