force-app/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/fields/tspa__Knowledgebase_Filter__c.field-meta.xml
<CustomField>
    <fullName>tspa__Knowledgebase_Filter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Knowledgebase Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>