force-app/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/fields/tspa__Message_Type__c.field-meta.xml
<CustomField>
    <fullName>tspa__Message_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>