force-app/main/default/objects/tspa__ObjectFieldSettingsForInviteComponent__c/fields/tspa__Session_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>tspa__Session_Type_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Session Type Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>